[tool.poetry]
name = "kaggle-env"
version = "0.1.0"
description = ""
authors = ["oivwepxelv <amm.demaio@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
google-api-core = "^2.1.1"
google-auth = "^2.3.0"
google-cloud-bigquery = "^2.28.1"
google-cloud-bigquery-storage = "^2.9.1"
google-cloud-core = "^2.1.0"
google-cloud-storage = "^1.42.3"
ipywidgets = "^7.6.5"
joblib = "^1.1.0"
jupyterlab = "^3.2.0"
jupyterlab-widgets = "^1.0.2"
jupytext = "^1.13.0"
pandas = "^1.3.3"
pandas-gbq = "^0.15.0"
papermill = "^2.3.3"
pyarrow = "^5.0.0"
scikit-learn = "^1.0"
tqdm = "^4.62.3"
flake8 = "^4.0.1"
voila = "^0.3.0"
matplotlib = "^3.5.1"
black = "^22.1.0"

[tool.poetry.dev-dependencies]
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
aiohttp = "^3.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"